[tool.poetry]
name = "mlflow-test"
version = "0.1.0"
description = ""
authors = ["Jose Miguel Chacón <josemiguelchacon@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.4.0"
pandas = "^2.2.0"
argparse = "^1.4.0"
mlflow = "^2.10.1"
azureml = "^0.2.7"
azureml-mlflow = "^1.55.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[start]
console_scripts = ["mlflow=mlflow.__main__:main"]

